# sound-garden-2

./: Cargo.toml  README.adoc
jack-modules/: Cargo.toml
jack-modules/src/: lib.rs  notification.rs
jack-stack/: Cargo.toml  jack-modules.toml
jack-stack/src/: config.rs  gatekeeper.rs  main.rs  manager.rs  module.rs  stack.rs
synth-modules/: Cargo.toml
synth-modules/src/: constant.rs  delay.rs  feedback.rs  lib.rs  phasor.rs  prelude.rs  pure.rs  rc_filter.rs  sample.rs
